
2021-08-18  Ron Norman <rjn@inglenet.com>

	* fileio.c: If 'record' is not allocated when reading filename.dd
	         then allocate one
	* fextfh.c: Check for key field defined before using it

2021-08-07  Ron Norman <rjn@inglenet.com>

	* common.h: Added new fields for REPORT structures
	* reportio.c: Rework callback to application to use "goto *pointer"
	          Additional changes as each LINE now has its own data area
			  The cob_report now has a version which is checked at runtime
			  The format of cob_report I/O routines changed

2021-07-12  Ron Norman <rjn@inglenet.com>

	* fextfh.c: Check FCD-CURRENT-REC-LEN being changed on WRITE/REWRITE

2021-07-02  Simon Sobisch <simonsobisch@gnu.org>

	* reportio.c: move hard line/col limit to REPORT_MAX_LINES REPORT_MAX_COLS
	* reportio.c (write_rec): changed to completely use cob_write
	  for CODE IS to handle all file attributes; backup and restore
	  original record definition

2021-07-07  Ron Norman <rjn@inglenet.com>

	* reportio.c (cob_report_generate): Fix bug #745 - missing invoke of
	  DECLARATIVES for DETAIL line

2021-07-05  Ron Norman <rjn@inglenet.com>

	* common.h: Added  cob_file   flag_is_concat, org_filename and nxt_filename
	* common.c: Handle runtime options COB_SEQ_CONCAT_NAME and
				COB_SEQ_CONCAT_SEP used for 'concatenated input files'
	* coblocal.h: Added  fields for concatenated files
	* fileio.c: Add code to handle SEQUENTIAL and LINE SEQUENTIAL
				concatenated input files for OPEN INPUT and I-O

2021-07-02  Ron Norman <rjn@inglenet.com>

	* common.h: Added  FCD2 structure
	* fextfh.c: Added checks for FCD2 being used

2021-07-02  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c: replaced use of ssize_t by off_t, removed some casting
	* fileio.h [WIN32]: definition of ftruncate

2021-07-01  Ron Norman <rjn@inglenet.com>

	* fbdb.c: Checks if filename is actually a directory

2021-06-28  Ron Norman <rjn@inglenet.com> and Christian Lademann
